--- a/index.css
+++ b/index.css
@@ -2,38 +2,52 @@
 
 :root {
 	--darkBackground: rgb(6, 6, 48);
-	--textColor: rgb(5, 194, 201);
+	/* --textColor: rgb(5, 194, 201); */
+
+	--textColor: #8969ca;
+	--darkInner: rgb(54, 54, 133);
+	--lightInner: rgb(217, 173, 238);
+}
+
+* {
+	box-sizing: border-box;
+	font-family: 'Montserrat', sans-serif;
 }
 
 html {
-	font-family: 'Montserrat', sans-serif;
 	letter-spacing: 1px;
 	font-size: 1.4rem;
 }
 
 body {
 	display: flex;
+	flex-direction: column;
 	align-items: center;
-	justify-content: center;
 	height: 100vh;
 	width: 100vw;
 	background-color: var(--darkBackground);
 	color: var(--textColor);
+	margin: 0;
+	padding: 0;
 }
 
-header {
+nav {
 	display: flex;
 	align-items: center;
-	justify-content: center;
-	margin-bottom: 2em;
-	box-shadow: 4px 2px 10px gold;
-	border-radius: 120px;
-	padding: 0 5em;
+	justify-content: space-between;
+	margin-bottom: 1em;
+	color: var(--textColor);
+	box-shadow: 0px -10px 30px var(--textColor);
+	padding: 0 1em;
 }
 
-h1 {
-	font-size: 4em;
-	color: gold;
+.navLink {
+	transition: all 0.1s ease-in-out;
+}
+
+.navLink:hover {
+	color: rgb(255, 255, 255);
+	cursor: pointer;
 }
 
 section {
@@ -41,7 +55,8 @@ section {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	width: 80vw;
+	width: 100vw;
+	max-width: 1400px;
 	margin: 0 auto;
 }
 
@@ -66,6 +81,15 @@ button {
 	border: transparent;
 	border-radius: 5px;
 	cursor: pointer;
+	background-color: var(--darkInner);
+	color: var(--lightInner);
+	letter-spacing: 0.7px;
+	box-shadow: 2px 2px 0px var(--textColor);
+}
+
+button:focus-within {
+	box-shadow: none;
+	transform: translate(2px, 2px);
 }
 
 textarea {
@@ -73,6 +97,7 @@ textarea {
 	height: 2em;
 	border: transparent;
 	border-radius: 5px;
-	font-size: 1em;
 	padding: 0.5em;
+	background-color: var(--darkInner);
+	color: var(--lightInner);
 }
