bugfix: add onblur, onmouseout logic to textarea to allow render with updated value

--- a/index.css
+++ b/index.css
@@ -87,7 +87,7 @@ button {
 	box-shadow: 2px 2px 0px var(--textColor);
 }
 
-button:focus-within {
+button {
 	box-shadow: none;
 	transform: translate(2px, 2px);
 }
